objects/Employee_Clocked_Time_for_Kronos__c/Employee_Clocked_Time_for_Kronos__c.object-meta.xml
<CustomObject>
    <label>Employee Clocked Time for Kronos</label>
    <nameField>
        <displayFormat>TFC-{0000000000}</displayFormat>
        <label>Entry No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Clocked Time for Kronos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>