objects/Employee_Clocked_Time_for_Kronos__c/fields/DataUpdated__c.field-meta.xml
<CustomField>
    <fullName>DataUpdated__c</fullName>
    <label>Data Updated</label>
    <length>250</length>
    <type>Text</type>
</CustomField>