objects/Employee_Clocked_Time_for_Kronos__c/fields/Entry_Type__c.field-meta.xml
<CustomField>
    <fullName>Entry_Type__c</fullName>
    <label>Entry Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In</fullName>
            </value>
            <value>
                <fullName>Out</fullName>
            </value>
            <value>
                <fullName>Lunch In</fullName>
            </value>
            <value>
                <fullName>Lunch Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>