objects/Employee_Clocked_Time_for_Kronos__c/fields/Kronos_Action__c.field-meta.xml
<CustomField>
    <fullName>Kronos_Action__c</fullName>
    <label>Kronos Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>