objects/Employee_Clocked_Time_for_Kronos__c/fields/OldEntryType__c.field-meta.xml
<CustomField>
    <fullName>OldEntryType__c</fullName>
    <label>OldEntryType</label>
    <length>10</length>
    <type>Text</type>
</CustomField>