objects/Employee_Clocked_Time_for_Kronos__c/fields/Original_Labor_Type__c.field-meta.xml
<CustomField>
    <fullName>Original_Labor_Type__c</fullName>
    <label>Original Labor Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>