objects/Employee_Clocked_Time_for_Kronos__c/fields/Pay_Rule_Line__c.field-meta.xml
<CustomField>
    <fullName>Pay_Rule_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pay Rule Line</label>
    <referenceTo>Pay_Rule_Line__c</referenceTo>
    <relationshipLabel>Employee Clocked Time for Kronos</relationshipLabel>
    <relationshipName>Employee_Clocked_Time_for_Kronos</relationshipName>
    <type>Lookup</type>
</CustomField>