objects/Employee_Clocked_Time_for_Kronos__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Employee Clocked Time for Kronos</relationshipLabel>
    <relationshipName>Employee_Clocked_Time_for_Kronos</relationshipName>
    <type>Lookup</type>
</CustomField>