objects/Employee_Clocked_Time_for_Kronos__c/fields/Resource_Off__c.field-meta.xml
<CustomField>
    <fullName>Resource_Off__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Off</label>
    <referenceTo>Resource_Off__c</referenceTo>
    <relationshipLabel>Employee Clocked Time for Kronos</relationshipLabel>
    <relationshipName>Employee_Clocked_Time_for_Kronos</relationshipName>
    <type>Lookup</type>
</CustomField>