objects/Employee_Clocked_Time_for_Kronos__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Employee Clocked Time for Kronos</relationshipLabel>
    <relationshipName>Employee_Clocked_Time_for_Kronos</relationshipName>
    <type>Lookup</type>
</CustomField>