objects/Employee_Clocked_Time_for_Kronos__c/fields/T_M_Line__c.field-meta.xml
<CustomField>
    <fullName>T_M_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>T&amp;M Line</label>
    <referenceTo>TM_Line__c</referenceTo>
    <relationshipLabel>Employee Clocked Time for Kronos</relationshipLabel>
    <relationshipName>Employee_Clocked_Time_for_Kronos</relationshipName>
    <type>Lookup</type>
</CustomField>