objects/Employee_Clocked_Time_for_Kronos__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time</label>
    <type>Time</type>
</CustomField>