objects/Employee_Clocked_Time_for_Kronos__c/fields/Time_Type__c.field-meta.xml
<CustomField>
    <fullName>Time_Type__c</fullName>
    <label>Time Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TimeType</valueSetName>
    </valueSet>
</CustomField>