objects/Employee_Clocked_Time_for_Kronos__c/fields/Time_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Time_Type_Code__c</fullName>
    <label>Time Type Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>