objects/Employee_Clocked_Time_for_Kronos__c/fields/Work_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_Date__c</fullName>
    <label>Work Date</label>
    <type>Date</type>
</CustomField>