objects/Employee_Clocked_Time_for_Kronos__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Entry_Type__c</columns>
    <columns>Exported_At__c</columns>
    <columns>Kronos_Action__c</columns>
    <columns>Resource__c</columns>
    <columns>Pay_Rule_Line__c</columns>
    <columns>Sales_Order__c</columns>
    <columns>T_M__c</columns>
    <columns>T_M_Line__c</columns>
    <columns>Time__c</columns>
    <columns>Time_Type__c</columns>
    <columns>Time_Type_Code__c</columns>
    <columns>Work_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notEqual</operation>
        <value>Steven Wang</value>
    </filters>
    <label>All</label>
</ListView>